k8s/postgres-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: postgres-deployment
spec:
    replicas: 1
    selector:
        matchLabels:
            component: postgres
    template:
        metadata:
            labels:
                component: postgres
        spec:
            volumes:
                - name: postgres-storage
                  persistentVolumeClaim:
                    claimName: database-persistent-volume-claim
            containers:
                - name: postgres
                  image: postgres
                  ports:
                    - containerPort: 5432
                  volumeMounts:
                    - name: postgres-storage # identico a spec\volumes\claim:
                                             # ossia dichiara che questo deployment ha bisogno di un volume con quelle specifiche
                                             # e dichiara che questo container utilizzera quel volume
                      # le seguente sono veramente specifiche per postgres
                      mountPath: /var/lib/postgresql/data # il path dove postgres salva i dati di solito
                      subPath: postgres # tutti i dati che sarebbero mountPath
                                        # vengono storicizzati in una cartella che si chiama postgres all interno del volume
                  # env:
                  #   - name: POSTGRES_PASSWORD
                  #     value: postgres_password
