k8s/server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: server-deployment
spec:
    replicas: 3
    selector:
        matchLabels:
            component: server
    template:
        metadata:
            labels:
                component: server
        spec:
            containers:
                - name: server
                  image: franco77/multi-server
                  #image: cygnetops/multi-server-pgfix-5-11 #la mia va in errore - proviamo quella del corso
                  ports:
                    - containerPort: 5000
